--- a/index.html
+++ b/index.html
@@ -27,8 +27,33 @@
             </form>
         </div>
     </section>
-    <section>section02</section>
-    <section>section03</section>
+    <section>
+        <div class="tabs_container">
+            <button>tab1</button>
+            <button>tab2</button>
+            <button>tab3</button>
+            <div class="tab_contents">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+                <div>Debitis quam fugit ut sunt, qui itaque doloremque dolorum nam dicta alias quibusdam reprehenderit nostrum vero, illum molestiae accusamus cum? Consequuntur, libero!</div>
+                <div>Repellat nulla qui facere, blanditiis molestias architecto cupiditate?</div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="tabs_form">
+        <input type="radio" name="btn" id="btn1" checked/>
+        <input type="radio" name="btn" id="btn2"/>
+        <input type="radio" name="btn" id="btn3"/>
+        <label for="btn1">버튼1</label>
+        <label for="btn2">버튼2</label>
+        <label for="btn3">버튼3</label>
+        <div class="tab_contents">
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+            <div>Debitis quam fugit ut sunt, qui itaque doloremque dolorum nam dicta alias quibusdam reprehenderit nostrum vero, illum molestiae accusamus cum? Consequuntur, libero!</div>
+            <div>Repellat nulla qui facere, blanditiis molestias architecto cupiditate?</div>
+        </div>
+        </div>
+    </section>
     <section>section04</section>
     <section>section05</section>
 </body>
