--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </div>
     </section>
     <section class="table_container">
+        <h2>멤버십 및 요금</h2>
+        <p>넷플릭스는 고객의 요구에 맞는 다양한 멤버십을 제공합니다<br> 
+        선택하는 멤버십에 따라 영상 화질 및 넷플릭스 시청을 위해 동시접속 가능한 명수가 달라집니다.</p>
         <table>
             <tr>
                 <td>data01</td>
